PATCH /api/v1/subnets/{id}/ips/{uuid} for updating ip hostnames
