# docs/swagger.yaml
@@ -65,6 +65,12 @@ definitions:
         example: "2024-05-10T15:04:05Z"
         type: string
     type: object
+  http.UpdateIPRequest:
+    properties:
+      hostname:
+        example: pc-1
+        type: string
+    type: object
 host: localhost:4040
 info:
   contact:
@@ -191,12 +197,12 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: Subnet id in which the ip is created
+      - description: Subnet id in which the ip is created.
         in: path
         name: id
         required: true
         type: integer
-      - description: IP address to update
+      - description: IP address to create.
         in: body
         name: payload
         required: true
@@ -224,7 +230,49 @@ paths:
       summary: Create ip under subnet
       tags:
       - subnets
-      - ips
+  /api/v1/subnets/{id}/ips/{uuid}:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Subnet id in which the ip is updated.
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: UUID of the ip to be updated.
+        in: path
+        name: uuid
+        required: true
+        type: string
+      - description: IP address to update
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/http.UpdateIPRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/http.IPResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/http.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/http.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.ErrorResponse'
+      summary: Update ip under subnet
+      tags:
+      - subnets
   /healthz:
     get:
       responses:
