# internal/http/api.go
@@ -41,6 +41,7 @@ func (a *API) Router() http.Handler {
 	mux.HandleFunc("GET /api/v1/subnets/{id}", a.handleGetSubnetByID)
 	mux.HandleFunc("POST /api/v1/subnets/{id}/ips", a.handleCreateIPBySubnetID)
 	mux.HandleFunc("GET /api/v1/subnets/{id}/ips", a.handleGetIPsBySubnetID)
+	mux.HandleFunc("PATCH /api/v1/subnets/{id}/ips/{uuid}", a.handleUpdateIPByUUID)
 
 	return mux
 }
